force-app/main/default/objects/IssueDetails__c/IssueDetails__c.object-meta.xml
<CustomObject>
    <label>IssueDetails</label>
    <nameField>
        <displayFormat>IS-{0}</displayFormat>
        <label>IssueDetails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IssueDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>