force-app/main/default/objects/IssueDetails__c/fields/DamagePercent__c.field-meta.xml
<CustomField>
    <fullName>DamagePercent__c</fullName>
    <label>DamagePercent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>