force-app/main/default/objects/IssueDetails__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>IssueDate__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>