force-app/main/default/objects/IssueDetails__c/fields/Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine__c</fullName>
    <formula>IF(
ISPICKVAL(Status__c,&quot;Issue&quot;),0,
IF(
ISPICKVAL(Status__c,&quot;Return&quot;),
IF(ReturnDate__c &gt; DueDate__c,(ReturnDate__c - DueDate__c)*10,0),
IF(
ISPICKVAL(Status__c,&quot;Lost&quot;),
IssuingCopy__r.RelatedBook__r.BookPrice__c,
IF(
ISPICKVAL(Status__c,&quot;Damaged&quot;),
IssuingCopy__r.RelatedBook__r.BookPrice__c * DamagePercent__c,
0
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>