force-app/main/default/objects/IssueDetails__c/fields/IssuingCopy__c.field-meta.xml
<CustomField>
    <fullName>IssuingCopy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IssuingCopy</label>
    <referenceTo>CopyDetails__c</referenceTo>
    <relationshipLabel>IssueDetails</relationshipLabel>
    <relationshipName>IssueDetails</relationshipName>
    <type>Lookup</type>
</CustomField>