force-app/main/default/objects/IssueDetails__c/fields/IssuingMember__c.field-meta.xml
<CustomField>
    <fullName>IssuingMember__c</fullName>
    <label>IssuingMember</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IssueDetails</relationshipLabel>
    <relationshipName>IssueDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>