force-app/main/default/objects/IssueDetails__c/fields/MemberEmail__c.field-meta.xml
<CustomField>
    <fullName>MemberEmail__c</fullName>
    <formula>IssuingMember__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MemberEmail</label>
    <type>Text</type>
</CustomField>