force-app/main/default/objects/IssueDetails__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>ReturnDate</label>
    <type>Date</type>
</CustomField>