force-app/main/default/objects/IssueDetails__c/validationRules/DamagePercent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DamagePercent_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Damaged&quot;),
DamagePercent__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Damage Percent is required</errorMessage>
</ValidationRule>