force-app/main/default/objects/IssueDetails__c/validationRules/IssueCopyAvailBeforeIssue.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueCopyAvailBeforeIssue</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  ISPICKVAL (Status__c, &quot;Issue&quot;),
  NOT (ISPICKVAL (IssuingCopy__r.Status__c, &quot;Available&quot;))
)</errorConditionFormula>
    <errorMessage>IssuingCopy Must Be Available Before Issue</errorMessage>
</ValidationRule>