force-app/main/default/objects/IssueDetails__c/validationRules/IssueDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IssueDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Issue Date cannot be the future date</errorMessage>
</ValidationRule>