force-app/main/default/objects/IssueDetails__c/validationRules/IssueDateRequiredWhenIssued.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueDateRequiredWhenIssued</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Issue&quot;),
  ISBLANK(IssueDate__c)
)</errorConditionFormula>
    <errorMessage>IssueDate Required When Status = Issue</errorMessage>
</ValidationRule>