force-app/main/default/objects/IssueDetails__c/validationRules/ReturnDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ReturnDate__c &lt; IssueDate__c</errorConditionFormula>
    <errorMessage>Return Date cannot be before than issue date</errorMessage>
</ValidationRule>