force-app/main/default/objects/IssueDetails__c/validationRules/ReturnDateRequiredWhenReturn.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnDateRequiredWhenReturn</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Return&quot;),
  ISBLANK(ReturnDate__c)
)</errorConditionFormula>
    <errorMessage>ReturnDate Required When Status = Return</errorMessage>
</ValidationRule>