force-app/main/default/objects/IssueDetails__c/validationRules/SameCopyTwice.validationRule-meta.xml
<ValidationRule>
    <fullName>SameCopyTwice</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  ISPICKVAL (Status__c, &quot;Issue&quot;),
  ISPICKVAL (IssuingCopy__r.Status__c, &quot;Issued&quot;)
)</errorConditionFormula>
    <errorMessage>Same Copy Cannot Be Issued Twice</errorMessage>
</ValidationRule>